crates/forge_api/src/snapshots/forge_api__workflow_loader__tests__load_workflow_with_file_prompt.snap
---
source: crates/forge_api/src/workflow_loader.rs
expression: "serde_json::to_string_pretty(&workflow)?"
---
{
  "agents": [
    {
      "id": "developer",
      "model": "anthropic/claude-3.5-sonnet",
      "description": null,
      "system_prompt": {
        "template": "You are a software developer assistant, good at solving complex software engineering problems"
      },
      "user_prompt": {
        "template": "<task>{{event.value}}</task>"
      },
      "tools": [
        "tool_forge_fs_read",
        "tool_forge_fs_create"
      ],
      "subscribe": [
        "user_task"
      ],
      "max_turns": 1024
    }
  ]
}
